--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <script type="text/javascript" src="static/js/js.js"></script>
+    <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 </head>
 <body>
 <div class="container">
@@ -15,6 +16,7 @@
     <div id="content"></div>
 </div>
 <h3>Input:</h3>
+<div id="inputandcat">
 <form id="runCalcForm" class="col formm">
     <div class="row"><label for="calcResult">Result:</label>
         <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
@@ -40,6 +42,8 @@
         <input type="number" id="zdiviation" name="zdiviation" value=10></div>
     <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
 </form>
+        <img id="cat" src="static/cat.png" alt="Smiley face">
+    </div>
 <h3>Equation:</h3>
 <div id="equation table">
     <div class="row">
