--- a/static/css/style.css
+++ b/static/css/style.css
@@ -4,7 +4,7 @@
 display: table-cell;
 }
 .col input{
-    width:60%;
+    width:70%;
 }
 
 .formm{
@@ -51,4 +51,9 @@ display: table-cell;
 {
     min-width:1em;
 }
+#inputandcat{
+display:flex;}
+#cat:hover {
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
 }
