--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>Flask React</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-height, initial-scale=1.0, user-scalable=yes">
     <!-- styles -->
     <link rel="stylesheet" type="text/css" href="static/css/style.css">
     <script type="text/javascript" src="static/js/js.js"></script>
@@ -11,39 +11,41 @@
 </head>
 <body>
 <div class="container">
-    <h1>Kupic Kota</h1>
-    <br>
+    <h2>Kupic Kota</h2>
     <div id="content"></div>
 </div>
 <h3>Input:</h3>
 <div id="inputandcat">
-<form id="runCalcForm" class="col formm">
-    <div class="row"><label for="calcResult">Result:</label>
-        <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
-    <div class="row"><label for="krouns">Kc:</label>
-        <input type="number" id="krouns" name="krouns" value=17539></div>
-    <div class="row"><label for="xExchangeRate">xExchangeRate:</label>
-        <input type="number" id="xExchangeRate" name=xExchangeRate value=27.00></div>
-    <div class="row"><label for="yApproximate">yApproximate:</label>
-        <input type="number" id="yApproximate" name=yApproximate value=7737></div>
-    <div class="row"><label for="zApproximate">zApproximate:</label>
-        <input type="number" id="zApproximate" name=zApproximate value=5330></div>
-    <div class="row"><label for="xincrement">x increment:</label>
-        <input type="number" id="xincrement" name="xincrement" value=0.1></div>
-    <div class="row"><label for="yincrement">y increment:</label>
-        <input type="number" id="yincrement" name="yincrement" value=1></div>
-    <div class="row"><label for="zincrement">z increment:</label>
-        <input type="number" id="zincrement" name="zincrement" value=1></div>
-    <div class="row"><label for="xdiviation">x diviation:</label>
-        <input type="number" id="xdiviation" name="xdiviation" value=0.1></div>
-    <div class="row"><label for="ydiviation">y diviation:</label>
-        <input type="number" id="ydiviation" name="ydiviation" value=200></div>
-    <div class="row"><label for="zdiviation">z diviation:</label>
-        <input type="number" id="zdiviation" name="zdiviation" value=200></div>
-    <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
-</form>
-        <img id="cat" src="static/cat.png" alt="Smiley face">
-    </div>
+    <form id="runCalcForm" class="col formm">
+        <div class="row"><label for="calcResult">Result:</label>
+            <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
+        <div class="row"><label for="krouns">Kc:</label>
+            <input type="number" id="krouns" name="krouns" value=17539></div>
+        <div class="row"><label for="xExchangeRate">xExchangeRate:</label>
+            <input type="number" id="xExchangeRate" name=xExchangeRate value=27.00 step=0.01></div>
+        <div class="row"><label for="yApproximate">yApproximate:</label>
+            <input type="number" id="yApproximate" name=yApproximate value=7737></div>
+        <div class="row"><label for="zApproximate">zApproximate:</label>
+            <input type="number" id="zApproximate" name=zApproximate value=5330></div>
+        <div class="row"><label for="xincrement">x increment:</label>
+            <input type="number" id="xincrement" name="xincrement" value=0.1 step=0.01></div>
+        <div class="row"><label for="yincrement">y increment:</label>
+            <input type="number" id="yincrement" name="yincrement" value=1></div>
+        <div class="row"><label for="zincrement">z increment:</label>
+            <input type="number" id="zincrement" name="zincrement" value=1></div>
+        <div class="row"><label for="xdiviation">x diviation:</label>
+            <input type="number" id="xdiviation" name="xdiviation" value=0.1></div>
+        <div class="row"><label for="ydiviation">y diviation:</label>
+            <input type="number" id="ydiviation" name="ydiviation" value=200></div>
+        <div class="row"><label for="zdiviation">z diviation:</label>
+            <input type="number" id="zdiviation" name="zdiviation" value=200></div>
+        <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
+    </form>
+    <img id="cat" src="static/cat.png" alt="Smiley face">
+    <!--<div id="catparent">
+
+    </div>-->
+</div>
 <h3>Equation:</h3>
 <div id="equation table">
     <div class="row">
@@ -82,7 +84,9 @@
 
 </div>
 <h3>Log Output:</h3>
-<div id="result"></div>
+<div id="result">
+    <div id="resulttext"></div>
+</div>
 <!-- scripts -->
 </body>
 </html>
