--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,7 +2,12 @@
 html {
     font-size: 1rem; /* or 62.5% or whatever you like, it doesn't matter, it's just a browser fix, however "rem" units will be based on that value, so make it confortable for calculations */
 }
-
+h3{
+    margin: 0.5rem 0rem 0rem 0rem;
+}
+.first{
+max-height:72vh
+}
 .col label{
     width:60%;
 display: table-cell;
@@ -22,9 +27,10 @@ font-size: 1rem;
     width:100%;
     display:flex;
 }
-#result{
+#resulttext{
     width:100%;
-    max-height: 28vh;
+    height: 12vh;
+    border: 2px solid black;
     max-width: 90vw;
     display:flex;
     overflow-y: scroll;
@@ -85,6 +91,13 @@ max-height: 100%;
   -webkit-transform: scaleX(-1);
   transform: scaleX(-1);
   height:100%;
+}
+#logstats{
+    display:inline-flex;
+}
+#logstats div{
+    display:inline-flex;
+    margin: 0rem 0rem 0rem 0.5rem;
 }
 body {
 max-height:100vh;
