--- a/templates/index.html
+++ b/templates/index.html
@@ -10,82 +10,87 @@
     <link rel="shortcut icon" type="image/png" href="static/favicon.png"/>
 </head>
 <body>
-<div class="container">
-    <h2>Kupic Kota</h2>
-    <div id="content"></div>
-</div>
-<h3>Input:</h3>
-<div id="inputandcat">
-    <form id="runCalcForm" class="col formm">
-        <div class="row"><label for="calcResult">Result:</label>
-            <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
-        <div class="row"><label for="krouns">Kc:</label>
-            <input type="number" id="krouns" name="krouns" value=17539></div>
-        <div class="row"><label for="xExchangeRate">xExchangeRate:</label>
-            <input type="number" id="xExchangeRate" name=xExchangeRate value=27.00 step=0.01></div>
-        <div class="row"><label for="yApproximate">yApproximate:</label>
-            <input type="number" id="yApproximate" name=yApproximate value=7737></div>
-        <div class="row"><label for="zApproximate">zApproximate:</label>
-            <input type="number" id="zApproximate" name=zApproximate value=5330></div>
-        <div class="row"><label for="xincrement">x increment:</label>
-            <input type="number" id="xincrement" name="xincrement" value=0.1 step=0.01></div>
-        <div class="row"><label for="yincrement">y increment:</label>
-            <input type="number" id="yincrement" name="yincrement" value=1></div>
-        <div class="row"><label for="zincrement">z increment:</label>
-            <input type="number" id="zincrement" name="zincrement" value=1></div>
-        <div class="row"><label for="xdiviation">x diviation:</label>
-            <input type="number" id="xdiviation" name="xdiviation" value=0.1></div>
-        <div class="row"><label for="ydiviation">y diviation:</label>
-            <input type="number" id="ydiviation" name="ydiviation" value=200></div>
-        <div class="row"><label for="zdiviation">z diviation:</label>
-            <input type="number" id="zdiviation" name="zdiviation" value=200></div>
-        <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
-    </form>
-    <img id="cat" src="static/cat.png" alt="Smiley face">
-    <!--<div id="catparent">
+<div class="first">
+    <h3>Input:</h3>
+    <div id="inputandcat">
+        <form id="runCalcForm" class="col formm">
+            <div class="row"><label for="calcResult">Result:</label>
+                <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
+            <div class="row"><label for="krouns">Kc:</label>
+                <input type="number" id="krouns" name="krouns" value=17539></div>
+            <div class="row"><label for="xExchangeRate">xExchangeRate:</label>
+                <input type="number" id="xExchangeRate" name=xExchangeRate value=27.10 step=0.01></div>
+            <div class="row"><label for="yApproximate">yApproximate:</label>
+                <input type="number" id="yApproximate" name=yApproximate value=7737></div>
+            <div class="row"><label for="zApproximate">zApproximate:</label>
+                <input type="number" id="zApproximate" name=zApproximate value=5330></div>
+            <div class="row"><label for="xincrement">x increment:</label>
+                <input type="number" id="xincrement" name="xincrement" value=0.1 step=0.01></div>
+            <div class="row"><label for="yincrement">y increment:</label>
+                <input type="number" id="yincrement" name="yincrement" value=1></div>
+            <div class="row"><label for="zincrement">z increment:</label>
+                <input type="number" id="zincrement" name="zincrement" value=1></div>
+            <div class="row"><label for="xdiviation">x diviation:</label>
+                <input type="number" id="xdiviation" name="xdiviation" value=0.1></div>
+            <div class="row"><label for="ydiviation">y diviation:</label>
+                <input type="number" id="ydiviation" name="ydiviation" value=200></div>
+            <div class="row"><label for="zdiviation">z diviation:</label>
+                <input type="number" id="zdiviation" name="zdiviation" value=200></div>
+            <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
+        </form>
+        <img id="cat" src="static/cat.png" alt="Smiley face">
+        <!--<div id="catparent">
 
-    </div>-->
-</div>
-<h3>Equation:</h3>
-<div id="equation table">
-    <div class="row">
-        <div class="cell" id="krounseq"></div>
-        <div class="cell thin"></div>
-        <div class="cell" id="yApproximateeq"></div>
-        <div class="cell thin"></div>
-        <div class="cell" id="zApproximateeq"></div>
-        <div class="cell thin"></div>
-        <div class="cell"></div>
+        </div>-->
     </div>
-    <div class="row">
-        <div class="cell">
-            <hr>
+    <h3>Equation:</h3>
+    <div id="equation table">
+        <div class="row">
+            <div class="cell" id="krounseq"></div>
+            <div class="cell thin"></div>
+            <div class="cell" id="yApproximateeq"></div>
+            <div class="cell thin"></div>
+            <div class="cell" id="zApproximateeq"></div>
+            <div class="cell thin"></div>
+            <div class="cell"></div>
         </div>
-        <div class="cell thin">+</div>
-        <div class="cell">
-            <hr>
+        <div class="row">
+            <div class="cell">
+                <hr>
+            </div>
+            <div class="cell thin">+</div>
+            <div class="cell">
+                <hr>
+            </div>
+            <div class="cell thin">+</div>
+            <div class="cell">
+                <hr>
+            </div>
+            <div class="cell thin">=</div>
+            <div class="cell" id="calcResulteq"></div>
         </div>
-        <div class="cell thin">+</div>
-        <div class="cell">
-            <hr>
+        <div class="row">
+            <div class="cell" id="xExchangeRateeqAprox"></div>
+            <div class="cell thin"></div>
+            <div class="cell" id="xExchangeRateeq1"></div>
+            <div class="cell thin"></div>
+            <div class="cell" id="xExchangeRateeq2"></div>
+            <div class="cell thin"></div>
+            <div class="cell"></div>
         </div>
-        <div class="cell thin">=</div>
-        <div class="cell" id="calcResulteq"></div>
-    </div>
-    <div class="row">
-        <div class="cell" id="xExchangeRateeqAprox"></div>
-        <div class="cell thin"></div>
-        <div class="cell" id="xExchangeRateeq1"></div>
-        <div class="cell thin"></div>
-        <div class="cell" id="xExchangeRateeq2"></div>
-        <div class="cell thin"></div>
-        <div class="cell"></div>
-    </div>
 
+    </div>
+    <h3 id="logstats">
+        <div>Log Output:</div>
+        <div>variations tried:</div>
+        <div id="combinations">0</div>
+        <div>correctValues:</div>
+        <div id="correctValuescount">0</div>
+    </h3>
 </div>
-<h3>Log Output:</h3>
-<div id="result">
-    <div id="resulttext"></div>
+<div id="resulttext">
+</div>
+<div id="correctValues">
 </div>
 <!-- scripts -->
 </body>
