--- a/static/css/style.css
+++ b/static/css/style.css
@@ -29,10 +29,17 @@ font-size: 1rem;
 }
 #resulttext{
     width:100%;
-    height: 12vh;
+    height: 8vh;
     border: 2px solid black;
     max-width: 90vw;
     display:flex;
+    overflow-y: scroll;
+}
+#correctValues{
+    width:100%;
+    height: 10vh;
+    border: 2px solid black;
+    max-width: 90vw;
     overflow-y: scroll;
 }
 
@@ -68,7 +75,7 @@ font-size: 1rem;
 #inputandcat{
 display:inline-flex;
 /*max-height:20vh;*/
-height:16rem;
+height:18rem;
 }
 #cat{
   display: block;
