--- a/static/css/style.css
+++ b/static/css/style.css
@@ -28,10 +28,14 @@ font-size: 0.9rem;
     width:100%;
     display:flex;
 }
+.row:hover{
+  background-color:rgba(33,33,33,.2);
+  box-shadow: 0 0 11px rgba(33,33,33,.2);
+}
 #resulttext{
     width:100%;
     height: 6.5vh;
-    border: 2px solid black;
+    border: 1px solid black;
     max-width: 90vw;
     display:flex;
     overflow-y: scroll;
@@ -39,7 +43,7 @@ font-size: 0.9rem;
 #correctValues{
     width:100%;
     height: 10vh;
-    border: 2px solid black;
+    border: 1px solid black;
     max-width: 90vw;
     overflow-y: scroll;
 }
