added translation and made wider

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,26 +18,26 @@
                 <input type="number" id="calcResult" name="calcResult" value=1133.32></div>
             <div class="row"><label for="krouns">Kc:</label>
                 <input type="number" id="krouns" name="krouns" value=17539></div>
-            <div class="row"><label for="ExchangeRate">ExchangeRate:</label>
+            <div class="row"><label for="ExchangeRate">ExchangeRate (Kurs):</label>
                 <input type="number" id="ExchangeRate" name=ExchangeRate value=27.10 step=0.01></div>
-            <div class="row"><label for="xApproximate">xApproximate:</label>
+            <div class="row"><label for="xApproximate">xApproximate (przyblizny):</label>
                 <input type="number" id="xApproximate" name=xApproximate value=27.00 step=0.01></div>
-            <div class="row"><label for="yApproximate">yApproximate:</label>
+            <div class="row"><label for="yApproximate">yApproximate (przyblizny):</label>
                 <input type="number" id="yApproximate" name=yApproximate value=7737></div>
-            <div class="row"><label for="zApproximate">zApproximate:</label>
+            <div class="row"><label for="zApproximate">zApproximate (przyblizny):</label>
                 <input type="number" id="zApproximate" name=zApproximate value=5330></div>
-            <div class="row"><label for="xincrement">x increment:</label>
-                <input type="number" id="xincrement" name="xincrement" value=0.1 step=0.01></div>
-            <div class="row"><label for="yincrement">y increment:</label>
+            <div class="row"><label for="xincrement">x increment (odstemp):</label>
+                <input type="number" id="xincrement" name="xincrement" value=0.01 step=0.01></div>
+            <div class="row"><label for="yincrement">y increment (odstemp):</label>
                 <input type="number" id="yincrement" name="yincrement" value=1></div>
-            <div class="row"><label for="zincrement">z increment:</label>
+            <div class="row"><label for="zincrement">z increment (odstemp):</label>
                 <input type="number" id="zincrement" name="zincrement" value=1></div>
-            <div class="row"><label for="xdiviation">x diviation:</label>
+            <div class="row"><label for="xdiviation">x diviation (zakres):</label>
                 <input type="number" id="xdiviation" name="xdiviation" value=0.1></div>
-            <div class="row"><label for="ydiviation">y diviation:</label>
-                <input type="number" id="ydiviation" name="ydiviation" value=200></div>
-            <div class="row"><label for="zdiviation">z diviation:</label>
-                <input type="number" id="zdiviation" name="zdiviation" value=200></div>
+            <div class="row"><label for="ydiviation">y diviation (zakres):</label>
+                <input type="number" id="ydiviation" name="ydiviation" value=500></div>
+            <div class="row"><label for="zdiviation">z diviation (zakres):</label>
+                <input type="number" id="zdiviation" name="zdiviation" value=500></div>
             <div class="row"><label for="equalstolerance">equals tolerance:</label>
                 <input type="number" id="equalstolerance" name="equalstolerance" value=0.005 step=0.001></div>
             <div><input style="width:100%" type="button" onclick="runcalc()" value="Run Calculation"></div>
