--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,12 +10,12 @@ h3{
 max-height:72vh
 }
 .col label{
-    width:60%;
+    width:75%;
 display: table-cell;
 font-size: 0.9rem;
 }
 .col input{
-    width:70%;
+    width:90%;
     font-size: 0.7rem;
 }
 
@@ -34,7 +34,7 @@ font-size: 0.9rem;
 }
 #resulttext{
     width:100%;
-    height: 6.5vh;
+    height: 10vh;
     border: 1px solid black;
     max-width: 90vw;
     display:flex;
@@ -42,7 +42,7 @@ font-size: 0.9rem;
 }
 #correctValues{
     width:100%;
-    height: 10vh;
+    height: 13.5vh;
     border: 1px solid black;
     max-width: 90vw;
     overflow-y: scroll;
@@ -80,7 +80,7 @@ font-size: 0.9rem;
 #inputandcat{
 display:inline-flex;
 /*max-height:20vh;*/
-height:35.8rem;
+height:36.5rem;
 }
 #cat{
   display: block;
@@ -106,6 +106,7 @@ max-height: 100%;
 }
 #logstats{
     display:inline-flex;
+    margin-top: 2rem;
 }
 #logstats div{
     display:inline-flex;
