--- a/templates/index.html
+++ b/templates/index.html
@@ -48,7 +48,7 @@
         </div>-->
     </div>
     <h3>Equation:</h3>
-    <div id="equation table">
+    <div id="equation table" class="equaltiontable">
         <div class="row">
             <div class="cell" id="krounseq"></div>
             <div class="cell thin"></div>
